--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="inner">
           <!-- Header -->
           <header id="header">
-            <a href="Home-page.html" class="logo"
+            <a href="index.html" class="logo"
               ><strong>Kiana </strong>Jenabidehkordi</a
             >
           </header>
