--- a/My-job-experience.html
+++ b/My-job-experience.html
@@ -242,7 +242,7 @@
               <h2>Menu</h2>
             </header>
             <ul>
-              <li><a href="Home-page.html">Kiana jenabidehkordi</a></li>
+              <li><a href="index.html">Kiana jenabidehkordi</a></li>
               <li><a href="My-job-experience.html">My Job Experience</a></li>
               <li><a href="Projects.html">My projects</a></li>
               <li><a href="My-career-journey.html">My Career Journey </a></li>
