--- a/My-career-journey.html
+++ b/My-career-journey.html
@@ -12,7 +12,7 @@
         text-justify: inter-word;
       }
     </style>
-    <title>Untitled</title>
+    <title>Kiana Jenabidehkordi - My Career Journey</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -49,8 +49,8 @@
               career.
             </p>
             <p>
-              However, after three months, I realized pharmacy wasn’t my true
-              passion. I enjoyed the work, but it didn’t light the spark I was
+              However, after three months, I realized pharmacy wasn't my true
+              passion. I enjoyed the work, but it didn't light the spark I was
               looking for. While continuing in pharmacy, I started exploring
               other options, hoping to find something more adventurous.
             </p>
@@ -58,14 +58,14 @@
               In December 2018, I took my first step into entrepreneurship. A
               friend and I started a small cosmetic business, creating
               customized herbal creams, gels, and lotions for spas and salons.
-              While we had some customers, our products didn’t stand out enough
+              While we had some customers, our products didn't stand out enough
               to grow the business. So, in July 2020, we shifted to marine-based
               products, focusing on spirulina and phycocyanin.
             </p>
             <p>
               This new venture came with its own challenges. Growing algae in a
               lab and scaling production turned out to be much harder than we
-              expected. With limited money and resources, we couldn’t keep the
+              expected. With limited money and resources, we couldn't keep the
               business running. By September 2020, we had to close it down.
             </p>
             <p>
@@ -76,22 +76,22 @@
             </p>
             <p>
               I worked as a lab assistant while improving my English and
-              applying to master’s programs in entrepreneurship and innovation.
+              applying to master's programs in entrepreneurship and innovation.
               In 2021, I was accepted into Toronto Metropolitan University. At
               first, I attended classes online while working full-time. In
               December 2021, I moved to Canada, ready to start a new chapter.
             </p>
             <p>
-              The transition wasn’t easy. The first six months were tough as I
+              The transition wasn't easy. The first six months were tough as I
               adjusted to a new culture and pushed myself out of my comfort
-              zone. But I kept going. Over the next 18 months, I joined TMU’s
+              zone. But I kept going. Over the next 18 months, I joined TMU's
               Innovation Boost Zone, started working on a new startup, and
               gained hands-on experience. After graduating, I needed to focus on
               practical matters like getting permanent residency and building
               the foundation of my life in Canada.
             </p>
             <p>
-              I paused my startup and took a job at TMU’s Biomedical Zone,
+              I paused my startup and took a job at TMU's Biomedical Zone,
               working with startups in the healthcare space. I discovered it is
               so joyful to work with researchers, inventors, and startups to
               help them in their startup development. I got to work with many
@@ -128,14 +128,14 @@
               <h2>Menu</h2>
             </header>
             <ul>
-              <li><a href="index.html">Kiana jenabidehkordi</a></li>
+              <li><a href="index.html">Kiana Jenabidehkordi</a></li>
               <li><a href="My-job-experience.html">My Job Experience</a></li>
-              <li><a href="Projects.html">My projects</a></li>
-              <li><a href="My-career-journey.html">My Career Journey </a></li>
+              <li><a href="Projects.html">My Projects</a></li>
+              <li><a href="My-career-journey.html">My Career Journey</a></li>
               <li>
-                <a href="What-i-am-learning.html">what i am learning about</a>
+                <a href="What-i-am-learning.html">What I am learning about</a>
               </li>
-              <li><a href="personal.html">WHO AM I AS A PERSON</a></li>
+              <li><a href="personal.html">Who I am as a person</a></li>
             </ul>
           </nav>
 
@@ -145,18 +145,18 @@
               <h2>Get in touch</h2>
             </header>
             <p>
-              Let’s connect! Ask me about my projects or the direction I’m
-              headed in my career. I’d love to hear about your career goals, the
-              new skills you’re working on, and how you approach
-              self-development. I’m always curious to learn from others and
-              happy to share my plans, the skills I’m currently focusing on, and
-              what I’ve been reading. Leave me a message, and I’ll get back to
+              Let's connect! Ask me about my projects or the direction I'm
+              headed in my career. I'd love to hear about your career goals, the
+              new skills you're working on, and how you approach
+              self-development. I'm always curious to learn from others and
+              happy to share my plans, the skills I'm currently focusing on, and
+              what I've been reading. Leave me a message, and I'll get back to
               you soon!
             </p>
             <ul class="contact">
               <li class="icon solid fa-envelope">kiana.jenabi@gmail.com</li>
               <li class="icon solid fa-envelope">kiana.jenabi@torontomu.ca</li>
-              <li class="icon solid fa-home">Toronto, ON, Canada<br /></li>
+              <li class="icon solid fa-home">Toronto, ON, Canada</li>
             </ul>
           </section>
 
