--- a/My-job-experience.html
+++ b/My-job-experience.html
@@ -12,7 +12,7 @@
         text-justify: inter-word;
       }
     </style>
-    <title>Untitled</title>
+    <title>Kiana Jenabidehkordi - My Job Experience</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -204,7 +204,7 @@
               </li>
               <li>
                 Presenting products to customers (e.g., beauty salons, spas) and
-                driving seals.
+                driving sales.
               </li>
             </ul>
 
@@ -242,14 +242,14 @@
               <h2>Menu</h2>
             </header>
             <ul>
-              <li><a href="index.html">Kiana jenabidehkordi</a></li>
+              <li><a href="index.html">Kiana Jenabidehkordi</a></li>
               <li><a href="My-job-experience.html">My Job Experience</a></li>
-              <li><a href="Projects.html">My projects</a></li>
-              <li><a href="My-career-journey.html">My Career Journey </a></li>
+              <li><a href="Projects.html">My Projects</a></li>
+              <li><a href="My-career-journey.html">My Career Journey</a></li>
               <li>
-                <a href="What-i-am-learning.html">what i am learning about</a>
+                <a href="What-i-am-learning.html">What I am learning about</a>
               </li>
-              <li><a href="personal.html">WHO AM I AS A PERSON</a></li>
+              <li><a href="personal.html">Who I am as a person</a></li>
             </ul>
           </nav>
 
@@ -259,18 +259,18 @@
               <h2>Get in touch</h2>
             </header>
             <p>
-              Let’s connect! Ask me about my projects or the direction I’m
-              headed in my career. I’d love to hear about your career goals, the
-              new skills you’re working on, and how you approach
-              self-development. I’m always curious to learn from others and
-              happy to share my plans, the skills I’m currently focusing on, and
-              what I’ve been reading. Leave me a message, and I’ll get back to
+              Let's connect! Ask me about my projects or the direction I'm
+              headed in my career. I'd love to hear about your career goals, the
+              new skills you're working on, and how you approach
+              self-development. I'm always curious to learn from others and
+              happy to share my plans, the skills I'm currently focusing on, and
+              what I've been reading. Leave me a message, and I'll get back to
               you soon!
             </p>
             <ul class="contact">
               <li class="icon solid fa-envelope">kiana.jenabi@gmail.com</li>
               <li class="icon solid fa-envelope">kiana.jenabi@torontomu.ca</li>
-              <li class="icon solid fa-home">Toronto, ON, Canada<br /></li>
+              <li class="icon solid fa-home">Toronto, ON, Canada</li>
             </ul>
           </section>
 
