--- a/What-i-am-learning.html
+++ b/What-i-am-learning.html
@@ -12,7 +12,7 @@
         text-justify: inter-word;
       }
     </style>
-    <title>Untitled</title>
+    <title>Kiana Jenabidehkordi - What I am learning about</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -28,7 +28,7 @@
         <div class="inner">
           <!-- Header -->
           <header id="header">
-            <a href="Home-page.html" class="logo"
+            <a href="index.html" class="logo"
               ><strong>Kiana </strong>Jenabidehkordi</a
             >
           </header>
@@ -38,7 +38,7 @@
             <div class="content">
               <!-- Section -->
               <header>
-                <h2>What I am currently learning about<br /></h2>
+                <h2>What I am currently learning about</h2>
               </header>
               <p>
                 Html hehe 😊 I made this website myself. I'm happy to get your
@@ -50,7 +50,7 @@
                 innovate, research, and operate in various industries. I follow
                 advancements in AI applications, quantum computing, and virtual
                 reality. There are several YouTube channels that I'm following
-                regularly; I’ve added them below just in case you want to take a
+                regularly; I've added them below just in case you want to take a
                 look!
               </p>
               <ul>
@@ -94,7 +94,7 @@
 
           <section>
             <header>
-              <h2>What I learned from 2021 to 2024<br /></h2>
+              <h2>What I learned from 2021 to 2024</h2>
             </header>
             <p>
               Four years ago, when I had to close my company in Iran, I realized
@@ -153,11 +153,11 @@
               <li><a href="index.html">Kiana Jenabidehkordi</a></li>
               <li><a href="My-job-experience.html">My Job Experience</a></li>
               <li><a href="Projects.html">My Projects</a></li>
-              <li><a href="My-career-journey.html">My Career Journey </a></li>
+              <li><a href="My-career-journey.html">My Career Journey</a></li>
               <li>
-                <a href="What-i-am-learning.html">what i am learning about</a>
+                <a href="What-i-am-learning.html">What I am learning about</a>
               </li>
-              <li><a href="personal.html">WHO AM I AS A PERSON</a></li>
+              <li><a href="personal.html">Who I am as a person</a></li>
             </ul>
           </nav>
 
@@ -167,12 +167,12 @@
               <h2>Get in touch</h2>
             </header>
             <p>
-              Let’s connect! Ask me about my projects or the direction I’m
-              headed in my career. I’d love to hear about your career goals, the
-              new skills you’re working on, and how you approach
-              self-development. I’m always curious to learn from others and
-              happy to share my plans, the skills I’m currently focusing on, and
-              what I’ve been reading. Leave me a message, and I’ll get back to
+              Let's connect! Ask me about my projects or the direction I'm
+              headed in my career. I'd love to hear about your career goals, the
+              new skills you're working on, and how you approach
+              self-development. I'm always curious to learn from others and
+              happy to share my plans, the skills I'm currently focusing on, and
+              what I've been reading. Leave me a message, and I'll get back to
               you soon!
             </p>
             <ul class="contact">
@@ -182,7 +182,7 @@
               <li class="icon solid fa-envelope">
                 kiana.jenabidehkordi@torontomu.ca
               </li>
-              <li class="icon solid fa-home">Toronto, ON, Canada<br /></li>
+              <li class="icon solid fa-home">Toronto, ON, Canada</li>
             </ul>
           </section>
 
