--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
         text-align: justify;
         text-justify: inter-word;
       }
+      h1 {
+        text-align: left;
+      }
     </style>
-    <title>Untitled</title>
+    <title>Kiana Jenabidehkordi - Portfolio</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -37,7 +40,7 @@
           <section id="banner">
             <div class="content">
               <header>
-                <h1 align="left">Hi, I’m Kiana Jenabidehkordi<br /></h1>
+                <h1>Hi, I'm Kiana Jenabidehkordi</h1>
                 <p style="text-transform: uppercase">
                   an innovation and entrepreneurship expert
                 </p>
@@ -65,7 +68,7 @@
               </ul>
             </div>
             <span class="image object">
-              <img src="images/pic12.jpg" alt="" />
+              <img src="images/pic12.jpg" alt="Kiana Jenabidehkordi" />
             </span>
           </section>
 
@@ -144,7 +147,7 @@
             </header>
             <div class="posts">
               <article>
-                <h3>Build a Bridge Program and Competition </h3>
+                <h3>Build a Bridge Program and Competition</h3>
                 <p>
                   Build a Bridge is a six-week initiative designed to inspire
                   and empower students to identify challenges in migrant
@@ -152,7 +155,7 @@
                   them. This initiative is hosted by the CERC in Migration and
                   Integration and the Bridging Divides programs at TMU.
                   Responsible Artificial Intelligence (RAI) sponsors the
-                  competition award. 
+                  competition award.
                 </p>
                 <ul class="actions">
                   <li>
@@ -173,7 +176,7 @@
                   goal is to highlight the use of advanced technologies in
                   solving social issues and to encourage innovation in migration
                   integration. This project is hosted by the Bridging Divides
-                  program at Toronto Metropolitan University.
+                  program at Toronto Metropolitan University.
                 </p>
                 <ul class="actions">
                   <li>
@@ -195,7 +198,7 @@
                   roundtables for enterprises to explore these challenges. After
                   problem discovery, we will create a toolkit and workshops to
                   help them overcome those challenges. This project is hosted by
-                  the CERC in Migration and Integration program. 
+                  the CERC in Migration and Integration program.
                 </p>
                 <ul class="actions">
                   <li>
@@ -254,11 +257,11 @@
               <li><a href="index.html">Kiana Jenabidehkordi</a></li>
               <li><a href="My-job-experience.html">My Job Experience</a></li>
               <li><a href="Projects.html">My Projects</a></li>
-              <li><a href="My-career-journey.html">My Career Journey </a></li>
+              <li><a href="My-career-journey.html">My Career Journey</a></li>
               <li>
-                <a href="What-i-am-learning.html">what i am learning about</a>
+                <a href="What-i-am-learning.html">What I am learning about</a>
               </li>
-              <li><a href="personal.html">WHO AM I AS A PERSON</a></li>
+              <li><a href="personal.html">Who I am as a person</a></li>
             </ul>
           </nav>
 
@@ -268,12 +271,12 @@
               <h2>Get in touch</h2>
             </header>
             <p>
-              Let’s connect! Ask me about my projects or the direction I’m
-              headed in my career. I’d love to hear about your career goals, the
-              new skills you’re working on, and how you approach
-              self-development. I’m always curious to learn from others and
-              happy to share my plans, the skills I’m currently focusing on, and
-              what I’ve been reading. Leave me a message, and I’ll get back to
+              Let's connect! Ask me about my projects or the direction I'm
+              headed in my career. I'd love to hear about your career goals, the
+              new skills you're working on, and how you approach
+              self-development. I'm always curious to learn from others and
+              happy to share my plans, the skills I'm currently focusing on, and
+              what I've been reading. Leave me a message, and I'll get back to
               you soon!
             </p>
             <ul class="contact">
@@ -283,7 +286,7 @@
               <li class="icon solid fa-envelope">
                 kiana.jenabidehkordi@torontomu.ca
               </li>
-              <li class="icon solid fa-home">Toronto, ON, Canada<br /></li>
+              <li class="icon solid fa-home">Toronto, ON, Canada</li>
             </ul>
           </section>
 
