--- a/personal.html
+++ b/personal.html
@@ -12,7 +12,7 @@
         text-justify: inter-word;
       }
     </style>
-    <title>Untitled</title>
+    <title>Kiana Jenabidehkordi - Who I Am as a Person</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -37,86 +37,110 @@
           <section id="banner">
             <div class="content">
               <header>
-                <h2>A Peek Into My Daily Life<br /></h2>
+                <h2>A Peek Into My Daily Life</h2>
               </header>
               <p>
-                My typical day starts with an early wake-up—I’m one of those
+                My typical day starts with an early wake-up—I'm one of those
                 people who gets out of bed right away, gets ready and gets out
                 of the house. First thing first, I get my coffee from the coffee
                 shop closeby (not the smartest financial move, I know, but it
                 makes me feel fancy 😊). With my coffee in hand, I brave the
                 chilly morning and hop on the public transport to go to work.
-                I’m in the office until the afternoon. By the time I get home,
-                the coffee buzz is long gone, and I’m feeling more calm and
+                I'm in the office until the afternoon. By the time I get home,
+                the coffee buzz is long gone, and I'm feeling more calm and
                 cozy. I cook dinner, and my partner and I play video games till
                 we get hungry, and we wrap up the day with dinner before heading
                 to bed.
               </p>
               <p>
-                Speaking of gaming, I’m not a pro or anything, but I love it. So
-                far I played Overcooked, Don’t Starve Together, and Minecraft.
-                Right now, I’m into Minecraft. I’m more of a builder than a
-                fighter in the game—it’s all about creativity for me.
+                Speaking of gaming, I'm not a pro or anything, but I love it. So
+                far I played Overcooked, Don't Starve Together, and Minecraft.
+                Right now, I'm into Minecraft. I'm more of a builder than a
+                fighter in the game—it's all about creativity for me.
               </p>
               <p>
-                When I’m home, one of my favorite activities is cooking while
-                listening to a podcast. It’s my little moment of zen. Reading a
+                When I'm home, one of my favorite activities is cooking while
+                listening to a podcast. It's my little moment of zen. Reading a
                 physical book isn't really my thing, but hey, we all have our
-                preferences! That’s a snapshot of my everyday life—simple, a
+                preferences! That's a snapshot of my everyday life—simple, a
                 little quirky, and filled with small joys. 😊
               </p>
               <p>
                 Twice a week (and sometimes on weekends), I dance tango. My
-                favorite spot is Lina and Bulent’s studio. The community there
-                is incredible, and it’s such a joy to be a part of. I also love
-                traveling. Whether it’s a laid-back trip or an adventure-packed
-                one, I’m always up for exploring new places.
+                favorite spot is Lina and Bulent's studio. The community there
+                is incredible, and it's such a joy to be a part of. I also love
+                traveling. Whether it's a laid-back trip or an adventure-packed
+                one, I'm always up for exploring new places.
               </p>
             </div>
           </section>
 
           <!-- Section -->
           <section>
-            <header class="major">
+            <header>
               <h2>Life in Frames: Coffee, Tango & More</h2>
             </header>
             <div class="posts">
               <article>
-                <a class="image"><img src="images/1.png" alt="" /></a>
+                <a class="image"
+                  ><img src="images/1.png" alt="Personal photo 1"
+                /></a>
               </article>
               <article>
-                <a class="image"><img src="images/2.png" alt="" /></a>
+                <a class="image"
+                  ><img src="images/2.png" alt="Personal photo 2"
+                /></a>
               </article>
               <article>
-                <a class="image"><img src="images/pic25.jpeg" alt="" /></a>
+                <a class="image"
+                  ><img src="images/pic25.jpeg" alt="Personal photo 3"
+                /></a>
               </article>
               <article>
-                <a class="image"><img src="images/pic26.jpeg" alt="" /></a>
+                <a class="image"
+                  ><img src="images/pic26.jpeg" alt="Personal photo 4"
+                /></a>
               </article>
               <article>
-                <a class="image"><img src="images/3.png" alt="" /></a>
+                <a class="image"
+                  ><img src="images/3.png" alt="Personal photo 5"
+                /></a>
               </article>
               <article>
-                <a class="image"><img src="images/4.png" alt="" /></a>
-              </article>
-			  <article>
-                <a class="image"><img src="images/10.png" alt="" /></a>
-              </article>
-			  <article>
-                <a class="image"><img src="images/11.png" alt="" /></a>
+                <a class="image"
+                  ><img src="images/4.png" alt="Personal photo 6"
+                /></a>
               </article>
               <article>
-                <a class="image"><img src="images/5.png" alt="" /></a>
+                <a class="image"
+                  ><img src="images/10.png" alt="Personal photo 7"
+                /></a>
               </article>
               <article>
-                <a class="image"><img src="images/6.png" alt="" /></a>
+                <a class="image"
+                  ><img src="images/11.png" alt="Personal photo 8"
+                /></a>
               </article>
               <article>
-                <a class="image"><img src="images/7.png" alt="" /></a>
+                <a class="image"
+                  ><img src="images/5.png" alt="Personal photo 9"
+                /></a>
               </article>
-			  <article>
-                <a class="image"><img src="images/9.png" alt="" /></a>
-              </article
+              <article>
+                <a class="image"
+                  ><img src="images/6.png" alt="Personal photo 10"
+                /></a>
+              </article>
+              <article>
+                <a class="image"
+                  ><img src="images/7.png" alt="Personal photo 11"
+                /></a>
+              </article>
+              <article>
+                <a class="image"
+                  ><img src="images/9.png" alt="Personal photo 12"
+                /></a>
+              </article>
             </div>
           </section>
         </div>
@@ -141,11 +165,11 @@
               <li><a href="index.html">Kiana Jenabidehkordi</a></li>
               <li><a href="My-job-experience.html">My Job Experience</a></li>
               <li><a href="Projects.html">My Projects</a></li>
-              <li><a href="My-career-journey.html">My Career Journey </a></li>
+              <li><a href="My-career-journey.html">My Career Journey</a></li>
               <li>
-                <a href="What-i-am-learning.html">what i am learning about</a>
+                <a href="What-i-am-learning.html">What I am learning about</a>
               </li>
-              <li><a href="personal.html">WHO AM I AS A PERSON</a></li>
+              <li><a href="personal.html">Who I am as a person</a></li>
             </ul>
           </nav>
 
@@ -155,22 +179,22 @@
               <h2>Get in touch</h2>
             </header>
             <p>
-              Let’s connect! Ask me about my projects or the direction I’m
-              headed in my career. I’d love to hear about your career goals, the
-              new skills you’re working on, and how you approach
-              self-development. I’m always curious to learn from others and
-              happy to share my plans, the skills I’m currently focusing on, and
-              what I’ve been reading. Leave me a message, and I’ll get back to
+              Let's connect! Ask me about my projects or the direction I'm
+              headed in my career. I'd love to hear about your career goals, the
+              new skills you're working on, and how you approach
+              self-development. I'm always curious to learn from others and
+              happy to share my plans, the skills I'm currently focusing on, and
+              what I've been reading. Leave me a message, and I'll get back to
               you soon!
             </p>
             <ul class="contact">
               <li class="icon solid fa-envelope">
-               kiana.jenabidehkordi@gmail.com
+                kiana.jenabidehkordi@gmail.com
               </li>
               <li class="icon solid fa-envelope">
                 kiana.jenabidehkordi@torontomu.ca
               </li>
-              <li class="icon solid fa-home">Toronto, ON, Canada<br /></li>
+              <li class="icon solid fa-home">Toronto, ON, Canada</li>
             </ul>
           </section>
 
