--- a/My-career-journey.html
+++ b/My-career-journey.html
@@ -99,14 +99,53 @@
               of managing a startup.
             </p>
             <p>
-              These days, I work with researchers in TMU labs to help develop
-              their products. While they focus on building the technology, I
-              engage with users to make sure the products align with their
-              needs. I then report back to the technical team to iterate on
-              their products. Another part of my role is to design educational
-              programs and competitions for computer engineering students. These
-              initiatives help them develop products that address important
-              social challenges.
+              While working with Biomedical Zone, I was assigned to work with
+              the Systems, Software, and Semantics (LS3) Lab as consultant and
+              conduct market research for some of their projects. After two
+              months of working with their team, they offered me the opportunity
+              to become a team member on the Codify AI project. They hired me as
+              an Innovation Specialist in Bridging Divides.
+            </p>
+            <p>
+              I was on a 6-month probation, during which I worked with Bridging
+              Divides on two streams: first, as a product owner for Codify AI,
+              focusing on user experience and aligning the product features with
+              the stakeholders’ business strategy. Second, developing an
+              innovation portfolio (innovative projects that contribute to
+              innovation KPIs) for Bridging Divides. I proposed five projects,
+              and three of them were funded.
+            </p>
+            <p>
+              After the probation period, I was hired as Innovation Lead. I
+              managed a team of four students, executing and managing three
+              projects that I had proposed: Build a Bridge, Startup Spotlight,
+              and Heritage Market Place, while allocating half of my time to
+              Codify AI. In 2024, when the BMO Newcomer Workforce Integration
+              Lab was initiated, I was added to their team and began my
+              collaboration with them.
+            </p>
+            <p>
+              I had an enjoyable experience working on the development of Codify
+              AI. I learned that to continue my career in digital tools
+              development, I need to learn more about the technical aspects of
+              developing AI and ML products. I took a 16-week accelerated
+              program at the University of Toronto, and in this program, I
+              learned many new things every week. Every weekend, I would spend
+              hours debugging code and applying all of my learning to practice
+              and complete mini projects. I am very pleased with this intense
+              learning experience.
+            </p>
+            <p>
+              I believe AI is fundamentally reshaping how industries operate,
+              develop products, analyze customer data, and design strategic
+              initiatives. I want to be a part of this transformation. Moving
+              forward, I'm prepared to bring three key strengths to my future
+              team: project management expertise, entrepreneurial thinking, and
+              knowledge in data science and machine learning. I'm actively
+              seeking project management positions with companies that are
+              pioneers in AI adoption, where I can collaborate with teams to
+              accelerate product development and contribute to AI integration in
+              organizations.
             </p>
           </section>
         </div>
@@ -132,9 +171,7 @@
               <li><a href="My-job-experience.html">My Job Experience</a></li>
               <li><a href="Projects.html">My Projects</a></li>
               <li><a href="My-career-journey.html">My Career Journey</a></li>
-              <li>
-                <a href="What-i-am-learning.html">What I am learning about</a>
-              </li>
+              <!-- <li><a href="What-i-am-learning.html">What I am learning about</a></li>-->
               <li><a href="personal.html">Who I am as a person</a></li>
             </ul>
           </nav>
