--- a/Projects.html
+++ b/Projects.html
@@ -59,7 +59,7 @@
                   class="text"
                   >Build a Bridge</a
                 >
-                is a six-week initiative designed to inspire and empower
+                is a twelve-week initiative designed to inspire and empower
                 students to identify challenges in migrant integration and
                 develop innovative AI solutions to address them. This initiative
                 is hosted by the CERC in Migration and Integration and the
@@ -131,6 +131,35 @@
               </p>
               <hr class="major" />
             </article>
+             <article>
+              <h2>Codify.ai Project</h2>
+              <p>
+                Codify is a data management digital tool for qualitative
+                research. It is designed for researchers in social sciences to
+                annotate and manage their research data and is currently in the
+                user test stage with Bridging Divides researchers. This project
+                is being developed by the Laboratory for Systems, Software, and
+                Semantics (LS3) at TMU, and Ebrahim Bagheri, Canada Research
+                Chair in Social Information Retrieval, leads this project.
+              </p>
+
+              <h3>My Role in the Project</h3>
+              <ul>
+                <li>Owning product backlog management, working closely with the senior product manager and executive leadership, and prioritizing the backlog based on stakeholders' business cases, requirements, and user needs.</li>
+                <li>Conducting UX/UI and customer journey testing sessions and providing a deep understanding of users' digital experience to the team and adjusting the product roadmap based on customer feedback.</li>
+              <li>Engaging with users and stakeholders to set up the requirements of codifying AI implementation in their workflow, helping them through implementation steps and processes, and providing product support during and after their migration to Codify AI.</li>
+              </ul>
+
+              <h3>Next step for the project</h3>
+              <p>
+                This is an ongoing project. While the technical team develops
+                the product, I will stay in touch with researchers, conduct user
+                testing, present the project at several meetings and seminars,
+                and encourage more researchers to participate in user tests and
+                provide feedback about the product.
+              </p>
+              <hr class="major" />
+            </article>
 
             <article>
               <h2>BMO Newcomer Workforce Integration Lab</h2>
@@ -159,33 +188,19 @@
 
               <h3>My Role in the Project</h3>
               <ul>
-                <li>
-                  I delivered a brief presentation on how AI adoption can
-                  support hiring and the integration of immigrants.
+                <li>Conducting stakeholder meetings with business partners in the BMO newcomer workforce lab to assess their challenges in hiring, integrating, and upskilling new immigrants.
                 </li>
 
-                <li>
-                  I explained the questions in the roundtable instruction
-                  regarding the challenges they face in deciding to implement
-                  AI, applying it effectively, and educating their staff on its
-                  ethical and safe use.
+                <li>Developing comprehensive documentation communicating key insights on partner and stakeholder interests, workshop expectations, and desired toolkit resources to senior project managers and executives.
                 </li>
-                <li>
-                  I facilitated one of the discussion groups, guiding the
-                  conversation by asking questions and ensuring the discussion
-                  remained focused on the session's objectives. I also
-                  encouraged active participation from all group members.
+                <li>Researching and identifying strategies, digital tools, and projects that could be a good fit for the toolkit and contributing to its development.
                 </li>
-                <li>
-                  At the workshop's conclusion, I presented a summary of my
-                  team's discussion, sharing their feedback and ideas with all
-                  participants.
-                </li>
+                
               </ul>
 
               <h3>Next step for the project</h3>
               <p>
-                In the first problem-discovery roundtable, 32 organizations
+                In the first problem-discovery roundtable, over 40 organizations
                 participated. We plan to publish the results of this initial
                 workshop, host another problem-discovery session in Spring 2025,
                 and engage more employers in the project.
@@ -193,42 +208,12 @@
               <hr class="major" />
             </article>
 
-            <article>
-              <h2>Codify.ai Project</h2>
-              <p>
-                Codify is a data management digital tool for qualitative
-                research. It is designed for researchers in social sciences to
-                label and manage their research data and is currently in the
-                user test stage with Bridging Divides researchers. This project
-                is being developed by the Laboratory for Systems, Software, and
-                Semantics (LS3) at TMU, and Ebrahim Bagheri, Canada Research
-                Chair in Social Information Retrieval, leads this project.
-              </p>
-
-              <h3>My Role in the Project</h3>
-              <ul>
-                <li>
-                  I conduct user tests and work closely with the engineers in
-                  the team to help them navigate the user behavior in the
-                  platform, develop a user-friendly product, and achieve product
-                  market fit.
-                </li>
-              </ul>
-
-              <h3>Next step for the project</h3>
-              <p>
-                This is an ongoing project. While the technical team develops
-                the product, I will stay in touch with researchers, conduct user
-                testing, present the project at several meetings and seminars,
-                and encourage more researchers to participate in user tests and
-                provide feedback about the product.
-              </p>
-              <hr class="major" />
-            </article>
-
+            
             <article>
               <h2>Aleoband Project</h2>
-
+<span class="image main"
+                ><img src="images/pic55.jpg" alt="Aleoband Project"
+              /></span>
               <p>
                 Aleoband is a specialized bandage designed to treat severe
                 sunburn symptoms in athletes who frequently experience sunburn.
@@ -490,9 +475,7 @@
               <li><a href="My-job-experience.html">My Job Experience</a></li>
               <li><a href="Projects.html">My Projects</a></li>
               <li><a href="My-career-journey.html">My Career Journey</a></li>
-              <li>
-                <a href="What-i-am-learning.html">What I am learning about</a>
-              </li>
+               <!-- <li><a href="What-i-am-learning.html">What I am learning about</a></li>-->
               <li><a href="personal.html">Who I am as a person</a></li>
             </ul>
           </nav>
