--- a/personal.html
+++ b/personal.html
@@ -70,8 +70,7 @@
                 favorite spot is Lina and Bulent's studio. The community there
                 is incredible, and it's such a joy to be a part of. I also love
                 traveling. Whether it's a laid-back trip or an adventure-packed
-                one, I'm always up for exploring new places.
-              </p>
+                one, I am not into camping. I love having a roof over my head for sleeping and a proper washroom 😂 😂 😂. I love exploring cities, cultures, cuisines, and interacting with people. I also love the sea, swimming 🏊‍♀️, diving 🤿, snorkeling and any other activity that involves the sea and ocean , I am totally up for it.</p>
             </div>
           </section>
 
@@ -166,9 +165,7 @@
               <li><a href="My-job-experience.html">My Job Experience</a></li>
               <li><a href="Projects.html">My Projects</a></li>
               <li><a href="My-career-journey.html">My Career Journey</a></li>
-              <li>
-                <a href="What-i-am-learning.html">What I am learning about</a>
-              </li>
+             <!-- <li><a href="What-i-am-learning.html">What I am learning about</a></li>-->
               <li><a href="personal.html">Who I am as a person</a></li>
             </ul>
           </nav>
